Always keep y-scrollbar to avoid content jumping.

--- a/pychess/content/stylesheet.less
+++ b/pychess/content/stylesheet.less
@@ -35,6 +35,8 @@
     font-family:Graublau Web,Verdana,Helvetica,Arial;*/
 }
 
+html { overflow-y: scroll; }
+
 h2, h3 {
     font-family: Graublau Web, Helvetica, Sans-Serif;
     color: @aluminium5;
